Fixing cropping and positioning

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -863,7 +863,6 @@ body {
 .shoe-grid .shoe-pic {
     width: 100%;
     overflow: hidden;
-    aspect-ratio: 560 / 330;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -916,6 +915,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
     border-radius: 10px 10px 0 0;
 }
 
